# frappe_vs

./: .gitignore  README.md  fetch_monaco.sh  license.txt  pyproject.toml
frappe_vs/: api.py  hooks.py  modules.txt  pty_server.py  registry.py
frappe_vs/desktop_icon/: frappe_vs.json
frappe_vs/frappe_vs/page/frappe_vs/: frappe_vs.css  frappe_vs.js  frappe_vs.json
frappe_vs/frappe_vs/workspace/frappe_vs/: frappe_vs.json
frappe_vs/public/monaco/: README.md
